[gd_scene load_steps=25 format=3 uid="uid://dwkww34bjmsws"]

[ext_resource type="Script" path="res://scenes/game/character/single_buccarold.gd" id="1_xhu0v"]
[ext_resource type="Script" path="res://scenes/game/character/single_load_skin.gd" id="2_lgltn"]
[ext_resource type="Script" path="res://scenes/game/character/teleporter.gd" id="3_y5bj2"]
[ext_resource type="Texture2D" uid="uid://bok5q7sxwnfus" path="res://assets/sprites/character/guidelines/Head.png" id="4_6j87v"]
[ext_resource type="Texture2D" uid="uid://drypq4jdrky7g" path="res://assets/sprites/character/guidelines/3_piece.png" id="5_x2an7"]
[ext_resource type="Texture2D" uid="uid://die5me60kg1r5" path="res://assets/sprites/character/guidelines/4_piece.png" id="6_57p3i"]
[ext_resource type="Texture2D" uid="uid://ii2517k08sno" path="res://assets/sprites/particle/Flame.png" id="7_um18o"]
[ext_resource type="Texture2D" uid="uid://cnhkrdor3gjqg" path="res://assets/sprites/character/guidelines/2_piece.png" id="8_302go"]
[ext_resource type="Script" path="res://scenes/game/modules/single_weapon_collision.gd" id="9_y3mkq"]
[ext_resource type="PackedScene" uid="uid://b5s5nff032il4" path="res://scenes/game/modules/skill_joy_stick.tscn" id="11_erygp"]
[ext_resource type="PackedScene" uid="uid://dfctusw14gxrg" path="res://scenes/game/modules/character.tscn" id="12_3a1es"]
[ext_resource type="PackedScene" uid="uid://xv24ne73swcs" path="res://scenes/game/modules/movement_joy_stick.tscn" id="12_f6o8j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n7h57"]
radius = 137.015

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ghiot"]
radius = 60.0
height = 362.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8d2vk"]
radius = 60.0
height = 348.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r8x64"]
radius = 62.0322

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7j5kh"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_wo1n6"]
colors = PackedColorArray(0.88174, 0.613124, 0, 1, 0.766509, 0.0819623, 0.0767846, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rasmm"]
gradient = SubResource("Gradient_wo1n6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ukld1"]
particle_flag_disable_z = true
direction = Vector3(2.08165e-12, -1, 2.08165e-12)
spread = 0.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
angular_velocity_max = 720.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_max = 720.0
scale_min = 0.4
scale_max = 0.4
color_ramp = SubResource("GradientTexture1D_rasmm")

[sub_resource type="CircleShape2D" id="CircleShape2D_l88jh"]
radius = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_txvdc"]
radius = 60.0
height = 242.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l46ok"]
radius = 60.0333
height = 461.142

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4udgv"]
radius = 60.3683
height = 481.231

[node name="Buccarold" type="Node2D"]
script = ExtResource("1_xhu0v")

[node name="LocalCharacter" type="Node2D" parent="."]
script = ExtResource("2_lgltn")

[node name="Head" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable", "Damager"]]
position = Vector2(0, -120)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Head"]
position = Vector2(0, -105)
texture = ExtResource("4_6j87v")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="LocalCharacter/Head"]
position = Vector2(0, -135)
shape = SubResource("CircleShape2D_n7h57")

[node name="HB" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB2" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB3" type="PinJoint2D" parent="LocalCharacter/Head"]
node_a = NodePath("..")
node_b = NodePath("../../Body")

[node name="HB4" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB5" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="Body" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
mass = 0.1
center_of_mass_mode = 1
center_of_mass = Vector2(0, -107)
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Body"]
texture = ExtResource("5_x2an7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Body"]
shape = SubResource("CapsuleShape2D_ghiot")

[node name="RLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(240, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLA"]
position = Vector2(-0.000427246, -120)
texture = ExtResource("5_x2an7")

[node name="RRA" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(57.0001, -1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-57, 1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA3" type="PinJoint2D" parent="LocalCharacter/RLA"]
rotation = -1.5708
node_a = NodePath("../../RUA")
node_b = NodePath("..")

[node name="RRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(57.0001, -1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-57, 1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLA"]
position = Vector2(-0.000396729, -113)
shape = SubResource("CapsuleShape2D_8d2vk")

[node name="RUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUA"]
position = Vector2(-0.000442505, -120)
texture = ExtResource("5_x2an7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUA"]
position = Vector2(-0.000442505, -120)
shape = SubResource("CapsuleShape2D_ghiot")

[node name="BRA" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(57, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA3" type="PinJoint2D" parent="LocalCharacter/RUA"]
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(57, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="RF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RF"]
shape = SubResource("CircleShape2D_r8x64")

[node name="RF" type="PinJoint2D" parent="LocalCharacter/RF"]
node_a = NodePath("../../RLA")
node_b = NodePath("..")
bias = 0.9

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RF"]
script = ExtResource("9_y3mkq")

[node name="RRA" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="Flames" type="GPUParticles2D" parent="LocalCharacter/RF"]
material = SubResource("CanvasItemMaterial_7j5kh")
position = Vector2(0, -87)
scale = Vector2(2.24693, 2.5147)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_ukld1")
texture = ExtResource("7_um18o")
lifetime = 0.8
local_coords = true

[node name="LLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-240, 0)
rotation = -1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLA"]
position = Vector2(0.000473022, -120)
texture = ExtResource("5_x2an7")

[node name="LLA" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA3" type="PinJoint2D" parent="LocalCharacter/LLA"]
rotation = -1.5708
node_a = NodePath("../../LUA")
node_b = NodePath("..")

[node name="LLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLA"]
position = Vector2(0.000473022, -113)
shape = SubResource("CapsuleShape2D_8d2vk")

[node name="LUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUA"]
position = Vector2(0.000442505, 120)
texture = ExtResource("5_x2an7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUA"]
position = Vector2(0.000442505, 120)
shape = SubResource("CapsuleShape2D_ghiot")

[node name="BLA" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(57.0001, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA3" type="PinJoint2D" parent="LocalCharacter/LUA"]
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(57.0001, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="LF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LF"]
shape = SubResource("CircleShape2D_r8x64")

[node name="LF" type="PinJoint2D" parent="LocalCharacter/LF"]
node_a = NodePath("../../LLA")
node_b = NodePath("..")

[node name="LK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-360, 984)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LK"]
shape = SubResource("CircleShape2D_l88jh")

[node name="LK" type="PinJoint2D" parent="LocalCharacter/LK"]
node_a = NodePath("../../LLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LK"]

[node name="Hip" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 240)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Hip"]
position = Vector2(0, 60)
texture = ExtResource("8_302go")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Hip"]
node_a = NodePath("../../Stomach")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Hip"]
position = Vector2(0, 60)
shape = SubResource("CapsuleShape2D_txvdc")

[node name="RLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(180, 672)
rotation = -0.506145
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLL"]
position = Vector2(0, 180)
texture = ExtResource("6_57p3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLL"]
position = Vector2(0, 170)
shape = SubResource("CapsuleShape2D_l46ok")

[node name="RRL" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="LocalCharacter/RLL"]
node_a = NodePath("../../RUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 360)
rotation = -0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUL"]
position = Vector2(0, 180)
texture = ExtResource("6_57p3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUL"]
position = Vector2(0, 180)
shape = SubResource("CapsuleShape2D_4udgv")

[node name="HRL" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="LocalCharacter/RUL"]
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(355, 987)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RK"]
shape = SubResource("CircleShape2D_l88jh")

[node name="RK" type="PinJoint2D" parent="LocalCharacter/RK"]
node_a = NodePath("../../RLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RK"]

[node name="Stomach" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 120)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Stomach"]
position = Vector2(0, 60)
texture = ExtResource("8_302go")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Stomach"]
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Stomach"]
position = Vector2(0, 60)
shape = SubResource("CapsuleShape2D_txvdc")

[node name="LLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-180, 672)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLL"]
position = Vector2(0, 180)
texture = ExtResource("6_57p3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLL"]
position = Vector2(0, 170)
shape = SubResource("CapsuleShape2D_l46ok")

[node name="RRL" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="LocalCharacter/LLL"]
node_a = NodePath("../../LUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 360)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_y5bj2")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUL"]
position = Vector2(0, 180)
texture = ExtResource("6_57p3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUL"]
position = Vector2(0, 180)
shape = SubResource("CapsuleShape2D_4udgv")

[node name="HRL" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="LocalCharacter/LUL"]
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="Extra" type="Node2D" parent="."]

[node name="Center" type="Marker2D" parent="Extra"]
position = Vector2(0, 305)

[node name="Reach" type="Marker2D" parent="Extra/Center"]
position = Vector2(750, 0)

[node name="HitCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillDuration" type="Timer" parent="Extra"]
one_shot = true

[node name="InvulnerabilityCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="JoyStick" type="CanvasLayer" parent="Extra"]

[node name="SkillJoyStick" parent="Extra/JoyStick" instance=ExtResource("11_erygp")]

[node name="MovementJoyStick" parent="Extra/JoyStick" instance=ExtResource("12_f6o8j")]

[node name="Character" parent="Extra" instance=ExtResource("12_3a1es")]
